apps/base/call-na/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: call-na-admin-ipallowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 10.22.65.0/24
