apps/base/call-na/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-na-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: call-na-frontend
  template:
    metadata:
      labels:
        app: call-na-frontend
    spec:
      containers:
        - name: call-na-frontend
          image: registry.kube.slc.net/slc/call-na-frontend:0.0.3
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 80
