apps/base/call-na/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: call-na-frontend-service
spec:
  type: ClusterIP
  externalTrafficPolicy: Local
  selector:
    app: call-na-frontend
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 3000
