apps/base/call-na/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: call-na-frontend-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - call.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
