apps/base/call-na/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: call-na-frontend-httpsroute
  labels:
    gateway: traefik-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - call.kube.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: call-na-admin-ipallowlist
    backendRefs:
    - name: call-na-frontend-service
      port: 6969

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: call-na-frontend-service
      port: 6969
